--- a/TsTimeline/TsTimeline.csproj
+++ b/TsTimeline/TsTimeline.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
     <PropertyGroup>
         <UseWPF>true</UseWPF>
-        <TargetFrameworks>net462;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net481</TargetFrameworks>
         <AssemblyName>Timeline</AssemblyName>
+        <Platforms>AnyCPU;x64</Platforms>
+        <TargetFramework>net481</TargetFramework>
+        <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+        <PackAsTool>False</PackAsTool>
     </PropertyGroup>
 
     <ItemGroup>
